@@ -3521,6 +3521,48 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testAutoIOThrottleGetter
+specifier|public
+name|void
+name|testAutoIOThrottleGetter
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ConcurrentMergeScheduler
+name|cms
+init|=
+operator|new
+name|ConcurrentMergeScheduler
+argument_list|()
+decl_stmt|;
+name|cms
+operator|.
+name|disableAutoIOThrottle
+argument_list|()
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|cms
+operator|.
+name|getAutoIOThrottle
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|cms
+operator|.
+name|enableAutoIOThrottle
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|cms
+operator|.
+name|getAutoIOThrottle
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testNonSpinningDefaults
 specifier|public
 name|void
