@@ -3882,6 +3882,14 @@ operator|.
 name|disableAutoIOThrottle
 argument_list|()
 expr_stmt|;
+name|assertFalse
+argument_list|(
+name|cms
+operator|.
+name|getAutoIOThrottle
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 name|cms
 operator|.
@@ -5471,6 +5479,14 @@ operator|instanceof
 name|ConcurrentMergeScheduler
 condition|)
 block|{
+name|ConcurrentMergeScheduler
+name|cms
+init|=
+operator|(
+name|ConcurrentMergeScheduler
+operator|)
+name|ms
+decl_stmt|;
 name|int
 name|maxThreadCount
 init|=
@@ -5501,12 +5517,35 @@ operator|+
 literal|4
 argument_list|)
 decl_stmt|;
-operator|(
-operator|(
-name|ConcurrentMergeScheduler
-operator|)
-name|ms
-operator|)
+name|boolean
+name|enableAutoIOThrottle
+init|=
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|enableAutoIOThrottle
+condition|)
+block|{
+name|cms
+operator|.
+name|enableAutoIOThrottle
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
+name|cms
+operator|.
+name|disableAutoIOThrottle
+argument_list|()
+expr_stmt|;
+block|}
+name|cms
 operator|.
 name|setMaxMergesAndThreads
 argument_list|(
@@ -5515,11 +5554,11 @@ argument_list|,
 name|maxThreadCount
 argument_list|)
 expr_stmt|;
-block|}
 name|didChange
 operator|=
 literal|true
 expr_stmt|;
+block|}
 block|}
 if|if
 condition|(
